[package]
name = "tnb-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.7"
hex = "0.4.3"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0.68"
bip39 = "1.0.1"
ed25519-dalek-bip32 = "0.1.1"
rand = "0.6.0"
stopwatch = "0.0.7"